# maws-menu

./: Cargo.toml  README.md
src/: history.rs  main.rs  menu.rs  term.rs
